--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "6e262daa-c486-4d83-9d2d-2b3eef53ddc6",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "1c693e75-8e0d-4db3-a1a2-fe298099aff2",
    "metadata": {},
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "61eb6e41-f19e-46fb-ab67-12455582da1f",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "714a9686-499f-4611-9600-57a59224dc8c",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "842ba6c5-b4db-4771-b703-de7e1d83b566",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "47910a6a-4461-45d2-95f1-e13ca4d33ec7",
    "metadata": {},
    "outputs": [],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "47bc29dd-6bb1-4c82-8b37-09b94ad2beaa",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "63ea51d5-9f98-47db-8bea-d3b7b2a4321e",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "61142ed0-37d7-440f-846a-6c6a8a9339c5",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "948bcc24-2578-41b0-a27d-dd1a436964a7",
    "metadata": {},
    "outputs": [
@@ -778,6 +778,53 @@
     "import joblib\n",
     "joblib.dump(scaler, \"../models/scaler.pkl\")\n",
     "print(\"Saved scaler to models/scaler.pkl\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9248b42-3de0-4b98-aa03-4fee9af93c6c",
+   "metadata": {},
+   "source": [
+    "## Export der Preprocessing-Artefakte\n",
+    "\n",
+    "Die finalen, leakage-freien Train/Test-Datensätze werden als Artefakte gespeichert,\n",
+    "damit nachfolgende Notebooks reproduzierbar und unabhängig arbeiten können.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "54a8618f-b649-4fb3-b23a-954ef5ce2335",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing-Artefakte gespeichert unter:\n",
+      "C:\\Users\\admin\\Desktop\\AI Sec Project\\GitHub\\fraud-risk-scoring\\data\\processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "\n",
+    "# Projekt-Root robust bestimmen\n",
+    "project_root = Path.cwd()\n",
+    "if project_root.name == \"notebooks\":\n",
+    "    project_root = project_root.parent\n",
+    "\n",
+    "data_dir = project_root / \"data\" / \"processed\"\n",
+    "data_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "np.save(data_dir / \"X_train.npy\", X_train_proc)\n",
+    "np.save(data_dir / \"X_test.npy\",  X_test_proc)\n",
+    "np.save(data_dir / \"y_train.npy\", y_train)\n",
+    "np.save(data_dir / \"y_test.npy\",  y_test)\n",
+    "\n",
+    "print(\"Preprocessing-Artefakte gespeichert unter:\")\n",
+    "print(data_dir.resolve())\n"
    ]
   }
  ],
